--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div class="container-main">
+    <main class="container-main">
       <div class="card">
         <div class="qrcode-image">
           <img src="images/image-qr-code.png" alt="" />
@@ -38,6 +38,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
