--- a/Index.html
+++ b/Index.html
@@ -19,24 +19,22 @@
     />
   </head>
   <body>
-    <main>
-      <div class="container-main">
-        <div class="card">
-          <div class="qrcode-image">
-            <img src="images/image-qr-code.png" alt="" />
+    <main class="container-main">
+      <div class="card">
+        <div class="qrcode-image">
+          <img src="images/image-qr-code.png" alt="" />
+        </div>
+        <div class="text-container">
+          <div class="heading">
+            <h3 class="heading-text">
+              Improve your front-end skills by building projects
+            </h3>
           </div>
-          <div class="text-container">
-            <div class="heading">
-              <h3 class="heading-text">
-                Improve your front-end skills by building projects
-              </h3>
-            </div>
-            <div class="sub-heading">
-              <p class="heading-sub">
-                Scan the QR code to visit front end mentor and take your coding
-                skills to next level
-              </p>
-            </div>
+          <div class="sub-heading">
+            <p class="heading-sub">
+              Scan the QR code to visit front end mentor and take your coding
+              skills to next level
+            </p>
           </div>
         </div>
       </div>
